# appimage-installer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  create-command-and-desktop-entry.py.jinja  create-environment.py  pyproject.toml
cursor/: create-command-and-desktop-entry.py  main.py
lm-studio/: main.py
obsidian/: create-command-and-desktop-entry.py  main.py
src/common/: create_command_and_desktop_entry.py
